# edgellm-xiaomi

./: .gitignore  CLAUDE.md  README.md  gradle.properties  local.properties.example  settings.gradle.kts
Tests/Python/: test_aime26_avg1_diagnostic.py  test_android_harness_replay_export.py  test_evaluation_policy.py  test_official_scorers.py  test_replay_harness_evaluator.py  test_replay_harness_evaluator_real.py
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
configs/: harness_replay_join_strategies.json  official_scorers_v1.json  table_reproduction_v1.json
docs/: completion_log.md  development_stack.md  model_matrix.md  table_reproduction.md
fixtures/replay_harness_minimal/: entries.jsonl
mlc/MLCChat/: mlc-package-config.json
scripts/: aggregate_official_evaluation.py  bootstrap_android_env.sh  bootstrap_mlc_python_env.sh  build_mlc_tvm_compiler.sh  check_env.sh  collect_failure_bundle.sh  fetch_gguf_model.sh  fetch_table_reproduction_datasets.py  install_debug.sh  mlc_package_bypass.py  package_mlc_android.sh  prepare_table_reproduction_bundle.py  pull_reports.sh  replay_harness_evaluator.py  run_aime26_avg1_batch_matrix_adb.sh  run_backend_smoke_adb.sh  run_benchmark_adb.sh  run_official_scorers.py  run_table_reproduction_bundle_adb.sh  score_table_reproduction_evidence.py  stage_model_adb.sh  stage_table_reproduction_bundle_adb.sh  summarize_aime26_avg1_batch_matrix.py  sync_mlc_package.sh  validate_apk_native_libs.sh  validate_mlc_android_package.py  validate_table_reproduction_manifest.py
(+51 files in other folders)
